[project]
name = "signalignllm"
version = "0.1.0"
description = "Integrating Multimodal Sign Language Processing into Large Language Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.5.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
]
